--- a/Home Page.html
+++ b/Home Page.html
@@ -4,16 +4,69 @@
     <title>Home | My Personal Website</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles.css">
+    
 <style>
-        
-div {
-  background-color: white;
-  width: 300px;
-  border: 4px solid #e67e22;
-  padding: 50px;
-  margin: 20px;
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+.topnav {
+  overflow: hidden;
+  background-color: #337;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: red;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: orange;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+p {
+outline-color:orange;
+padding: 5px;
+}
+p.solid {outline-style: solid;}
+
 
 h1 {
   background-color:#ff000080;
@@ -30,28 +83,6 @@ h2, p {
 }
 
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background-color: #337;
-  display: flex;
-}
-
-ul li a {
-  display: block;
-  color: white;
-  padding: 20px 16px;
-  text-decoration: none;
-}
-
-ul li a:hover:not(.active) {
-  background-color: red;
-}
-
-ul li a.active {
-  background-color: black;
-}
 
 ol {
   background-color: light blue;
@@ -71,15 +102,31 @@ h3 { font-family: "Times New Roman", Times, serif;
 </head>
 <body>
 
-<ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#personal info">Personal Information</a></li>
-  <li><a href="#contact">Contact</a></li>
-</ul>
+
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#news">Personal Information</a>
+  <a href="#contact">Contact</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 
 <h1>Welcome to John Guo's Personal Website</h1>
 
-<div> I'm a Year 4 Digital Business student passionate about web development. I built this website for my BAI4010 assignment to showcase my skills and projects.</div>
+<p class="solid">I'm a Year 4 Digital Business student passionate about web development. I built this website for my BAI4010 assignment to showcase my skills and projects.</p>
+
 
 <h2 style="color: black"> Skills</h2>
 
