--- a/Contact Page.html
+++ b/Contact Page.html
@@ -135,9 +135,9 @@ ul.b {list-style-type: disc;}
 
 
 <div class="topnav" id="myTopnav">
-  <a href="#home">Home</a>
-  <a href="#news">Personal Information</a>
-  <a href="#contact" class="active">Contact</a>
+  <a href="Home Page.html">Home</a>
+  <a href="Personal Information Page.html>Personal Information</a>
+  <a href="Contact Page.html" class="active">Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
