Update navigation links in Home Page.html

--- a/Home Page.html
+++ b/Home Page.html
@@ -104,9 +104,9 @@ h3 { font-family: "Times New Roman", Times, serif;
 
 
 <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">Personal Information</a>
-  <a href="#contact">Contact</a>
+  <a href="Home Page.html" class="active">Home</a>
+  <a href="Personal Information Page.html">Personal Information</a>
+  <a href="Contact Page.html">Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
