--- a/Personal Information Page.html
+++ b/Personal Information Page.html
@@ -163,9 +163,9 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <a href="#home">Home</a>
-      <a href="#news" class="active">Personal Information</a>
-      <a href="#contact">Contact</a>
+      <a href="Home Page.html">Home</a>
+      <a href="Personal Information Page.html" class="active">Personal Information</a>
+      <a href="Contact Page.html">Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
