--- a/Contact Page.html
+++ b/Contact Page.html
@@ -7,14 +7,7 @@
 </head>
 <body>
     <h1>Contact Us</h1>
-    <p>Please fill out the form below to get in touch.</p>
-    <form action="#" method="post">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name"><br>
-        <label for="email">Email:</label><br>
-        <input type="text" id="email" name="email"><br>
-        <input type="submit" value="Submit">
-    </form>
-    <p>For more information, visit our <a href="Personal Information Page.html">Personal Information</a>.</p>
+    <p>If you have any questions, please feel free to <a href="mailto:contact@example.com">email us</a>.</p>
+    <p>Visit our <a href="Personal Information Page.html">Personal Information</a> for more details.</p>
 </body>
 </html>
