--- a/Contact Page.html
+++ b/Contact Page.html
@@ -6,8 +6,12 @@
     <title>Contact Page</title>
 </head>
 <body>
-    <h1>Contact Us</h1>
-    <p>If you have any questions, please feel free to <a href="mailto:contact@example.com">email us</a>.</p>
-    <p>Visit our <a href="Personal Information Page.html">Personal Information</a> for more details.</p>
+    <h1>Contact Information</h1>
+    <p>If you have any questions, feel free to reach out!</p>
+    <ul>
+        <li>Email: <a href="mailto:example@example.com">example@example.com</a></li>
+        <li>Phone: (123) 456-7890</li>
+        <li><a href="Personal Information Page.html">Personal Information Page.html</a></li>
+    </ul>
 </body>
 </html>
