--- a/Contact Page.html
+++ b/Contact Page.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Contact Information</h1>
-    <p>If you have any questions, feel free to reach out!</p>
-    <ul>
-        <li>Email: <a href="mailto:example@example.com">example@example.com</a></li>
-        <li>Phone: (123) 456-7890</li>
-        <li><a href="Personal Information Page.html">Personal Information Page.html</a></li>
-    </ul>
+    <header>
+        <h1>Contact Us</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Get in Touch</h2>
+            <p>If you have any questions, feel free to reach out!</p>
+            <a href="Personal Information Page.html">Personal Information</a>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2026 John Doe. All rights reserved.</p>
+    </footer>
 </body>
 </html>
