Update links in dropdown to point to the current page

--- a/Personal Information Page.html
+++ b/Personal Information Page.html
@@ -172,9 +172,9 @@
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Quick Guide</a>
         <div class="dropdown-content">
-          <a href="#person info">Personal Info(Detail)</a>
-          <a href="#hobby">Hobbies</a>
-          <a href="#work experience">Work Experience</a>
+          <a href="Personal Information Page.html">Personal Info(Detail)</a>
+          <a href="Personal Information Page.html">Hobbies</a>
+          <a href="Personal Information Page.html">Work Experience</a>
         </div>
       </li>
     </div>
