--- a/Contact Page.html
+++ b/Contact Page.html
@@ -18,7 +18,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2026 John Doe. All rights reserved.</p>
+        <p>&copy; 2026 John Guo. All rights reserved.</p>
     </footer>
 </body>
 </html>
