--- a/Home.html
+++ b/Home.html
@@ -104,9 +104,9 @@ h3 { font-family: "Times New Roman", Times, serif;
 
 
 <div class="topnav" id="myTopnav">
-  <a href="Home Page.html" class="active">Home</a>
-  <a href="Personal Information Page.html">Personal Information</a>
-  <a href="Contact Page.html">Contact</a>
+  <a href="Home.html" class="active">Home</a>
+  <a href="Personal.html">Personal Information</a>
+  <a href="Contact.html">Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
