Update links to use new Personal.html file

--- a/Personal.html
+++ b/Personal.html
@@ -163,18 +163,18 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <a href="Home Page.html">Home</a>
-      <a href="Personal Information Page.html" class="active">Personal Information</a>
-      <a href="Contact Page.html">Contact</a>
+      <a href="Home.html">Home</a>
+      <a href="Personal.html" class="active">Personal Information</a>
+      <a href="Contact.html">Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Quick Guide</a>
         <div class="dropdown-content">
-          <a href="Personal Information Page.html">Personal Info(Detail)</a>
-          <a href="Personal Information Page.html">Hobbies</a>
-          <a href="Personal Information Page.html">Work Experience</a>
+          <a href="Personal.html">Personal Info(Detail)</a>
+          <a href="Personal.html">Hobbies</a>
+          <a href="Personal.html">Work Experience</a>
         </div>
       </li>
     </div>
