Update and rename Home.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -85,7 +85,7 @@ h2, p {
 
 
 ol {
-  background-color: light blue;
+  background-color: lightblue;
   font-family: "Lucida Console", "Courier New", monospace;
   font-weight: bold;
   color:black;
@@ -104,9 +104,9 @@ h3 { font-family: "Times New Roman", Times, serif;
 
 
 <div class="topnav" id="myTopnav">
-  <a href="Home.html" class="active">Home</a>
-  <a href="Personal.html">Personal Information</a>
-  <a href="Contact.html">Contact</a>
+  <a href="index.html" class="active">Home</a>
+  <a href="personal-info.html">Personal Information</a>
+  <a href="contact.html">Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -144,7 +144,9 @@ function myFunction() {
   <li>Build more projects </li>
 </ol>
                      
-<h3>If you are interested, please check more information in the "information page" and leave message with me in the "Contack" page. Thank you and hope you have a nice day! (^ v ^)</h3>
+<h3>If you are interested, please check more information in the "information page" and leave message with me in the "Contact" page. Thank you and hope you have a nice day! (^ v ^)</h3>
 
 </body>
 </html>
+                     
+
