Change form action to alert feedback submission

--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@ input[type=submit]:hover {
 <p>Please write your comment. This can be an improvement point for this website or any other information.</p>
 
 <div class="container">
-  <form action="/action_page.php">
+<form onsubmit="alert('Thank you for your feedback!'); return false;">
     <div class="row">
       <div class="col-25">
         <label for="fname">First Name</label>
